[modify] チャットサポート機能を実装

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- ChatSupport -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.mlkcca.com/chatsupport.min.css">
+
     <!-- Style CSS -->
     <link href="css/style.css" rel="stylesheet">
 
@@ -555,6 +558,8 @@
 </div>
 <!-- #main-wrapper -->
 
+<!-- ChatWindow -->
+<div data-appid="seaj45nzph8" data-color="blue" data-meson="当ハッカソンに関わる疑問やお問い合わせがありましたらお気軽に！" data-mesoff="ただいまチャットサポート担当オペレータがオフライン中です。メールアドレスとメッセージを残して頂ければ、後日返信致します。" milkchat></div>
 
 <!-- jquery -->
 <script src="js/jquery-2.1.4.min.js"></script>
@@ -567,6 +572,10 @@
 
 <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
 <script src="https://maps.googleapis.com/maps/api/js"></script>
+
+<!-- ChatSupport -->
+<script src="https://cdn.mlkcca.com/v0.6.0/milkcocoa.js"></script>
+<script src="https://cdn.mlkcca.com/chatsupport.min.js"></script>
 
 <!--<script src="js/one-page-nav.js"></script>-->
 <script src="js/scripts.js"></script>
