[modify] トップのジャンボトロンを修正

--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
 
     <div class="jumbotron text-center">
         <div class="content">
-            <div class="event-date">DECEMBER 20–25, 2017, SHANGHAI</div>
-            <h1>TakizawaHackathon</h1>
-            <p class="lead">It's a tag line, where you can write a key point of your idea. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-            <button type="button" class="btn btn-default btn-lg">STAY IN THE LOOP</button>
+            <div class="event-date">2017/8/5(土)-6(日)</div>
+            <div class="typewriter">
+              <!-- <h1 class="jumbotron-catch-copy wf-notosansjapanese ">岩手の学生が集い<br>滝沢の課題に挑む２日間。</h1> -->
+              <span class="wf-notosansjapanese">TakizawaHackathonで &nbsp;</span><span class="title-catch-copy wf-notosansjapanese"></span><span class="title-cursor">|</span>
+            </div>
+            <button type="button" class="btn btn-default btn-lg btn-shadow wf-notosansjapanese ">参戦する</button>
         </div>
     </div>
     <!-- .Jumbotron-->
@@ -559,7 +561,7 @@
 <!-- #main-wrapper -->
 
 <!-- ChatWindow -->
-<div data-appid="seaj45nzph8" data-color="blue" data-meson="当ハッカソンに関わる疑問やお問い合わせがありましたらお気軽に！" data-mesoff="ただいまチャットサポート担当オペレータがオフライン中です。メールアドレスとメッセージを残して頂ければ、後日返信致します。" milkchat></div>
+<div data-appid="seaj45nzph8" data-color="black" data-meson="当ハッカソンに関わる疑問やお問い合わせがありましたらお気軽に！" data-mesoff="ただいまチャットサポート担当オペレータがオフライン中です。メールアドレスとメッセージを残して頂ければ、後日返信致します。" milkchat></div>
 
 <!-- jquery -->
 <script src="js/jquery-2.1.4.min.js"></script>
