--- a/index.html
+++ b/index.html
@@ -83,14 +83,17 @@
 
     </header>
 
-    <div class="jumbotron text-center">
+    <div class="jumbotron">
         <div class="content">
-            <div class="event-date">2017/8/5(土)-6(日)</div>
             <div class="typewriter">
               <!-- <h1 class="jumbotron-catch-copy wf-notosansjapanese ">岩手の学生が集い<br>滝沢の課題に挑む２日間。</h1> -->
-              <span class="wf-notosansjapanese">TakizawaHackathonで &nbsp;</span><span class="title-catch-copy wf-notosansjapanese"></span><span class="title-cursor">|</span>
+              <span class="catch-copy wf-notosansjapanese">この週末で、&nbsp;</span><span class="input-catch-copy wf-notosansjapanese"></span><span class="title-cursor">|</span>
             </div>
-            <button type="button" class="btn btn-default btn-lg btn-shadow wf-notosansjapanese ">参戦する</button>
+            <div class="event-date"></div>
+            <div class="event-share-button">
+              <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+            </div>
+            <a href="https://goo.gl/forms/xGV5PKBYI8zcPacq2" class="btn btn-default btn-shadow wf-notosansjapanese" target="_blank"><span>参戦する</span></a>
         </div>
     </div>
     <!-- .Jumbotron-->
@@ -548,7 +551,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center">&copy; 2017 TakizawaHackathon 実行委員会 | Design By: <a href="https://uicookies.com">uiCookies</a></div>
+                    <div class="copytext text-center">&copy; 2017 TakizawaHackathon 実行委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a href="https://github.com/konnobu">konnobu</a></div>
                 </div>
             </div>
             <!-- .container -->
@@ -562,6 +565,9 @@
 
 <!-- ChatWindow -->
 <div data-appid="seaj45nzph8" data-color="black" data-meson="当ハッカソンに関わる疑問やお問い合わせがありましたらお気軽に！" data-mesoff="ただいまチャットサポート担当オペレータがオフライン中です。メールアドレスとメッセージを残して頂ければ、後日返信致します。" milkchat></div>
+
+<!-- TweetButton -->
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 <!-- jquery -->
 <script src="js/jquery-2.1.4.min.js"></script>
