[modify] トップビューにパーシャルエフェクトを追加

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                         <li class="hidden"><a href="#page-top"></a></li>
                         <li><a class="page-scroll" href="#section-about">概要</a></li>
                         <li><a class="page-scroll" href="#section-timetable">タイムテーブル</a></li>
-                        <li><a class="page-scroll" href="#section-afterparty">null</a></li>
+                        <!-- <li><a class="page-scroll" href="#section-afterparty">懇親会</a></li> -->
                         <li><a class="page-scroll" href="#section-sponsors">スポンサー</a></li>
                         <li><a class="page-scroll" href="#section-team">チーム</a></li>
-                        <li><a class="page-scroll" href="#section-past">これまで</a></li>
+                        <!-- <li><a class="page-scroll" href="#section-past">これまで</a></li> -->
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -100,10 +100,9 @@
 
     </header>
 
-    <div class="orig-jumbotron">
+    <div class="orig-jumbotron" id="background-particles">
           <div class="content content-one">
             <div class="typewriter wf-notosansjapanese">
-              <!-- <h1 class="jumbotron-catch-copy wf-notosansjapanese ">岩手の学生が集い<br>滝沢の課題に挑む２日間。</h1> -->
               <span class="catch-copy">この週末で、</span><br class="br-sp"><span class="input-catch-copy"></span><span class="title-cursor">|</span>
             </div>
           </div>
@@ -610,6 +609,10 @@
 <!-- ChatSupport -->
 <script src="https://cdn.mlkcca.com/v0.6.0/milkcocoa.js"></script>
 <script src="https://cdn.mlkcca.com/chatsupport.min.js"></script>
+
+<!-- particles-js -->
+<script src="js/particles.min.js"></script>
+<script src="js/particle.js"></script>
 
 <!--<script src="js/one-page-nav.js"></script>-->
 <script src="js/scripts.js"></script>
