[modify] コピーライト記述の修正

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center">&copy; 2017 TakizawaHackathon 実行委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a href="https://github.com/konnobu">konnobu</a></div>
+                    <div class="copytext text-center">&copy; 2017 TakizawaHackathon 実行委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a href="https://github.com/rkonno">rkonno</a></div>
                 </div>
             </div>
             <!-- .container -->
