[modify] consoleで確認できるエラーの解消

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <p class="lead">
-                      TakizawaHacathonは、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだす、県内のエンジニア／デザイナー／プランナーなどのクリエイターためのハッカソンコミュニティです。
+                      TakizawaHackathonは、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだす、県内のエンジニア／デザイナー／プランナーなどのクリエイターためのハッカソンコミュニティです。
                     </p>
                     <p class="lead">
                       夏真っ只中の8月5日-6日の土日にTakizawaHackathon ver.3が開催されます。ver.3では滝沢市のリアルな課題を解決するアイディアを考え、テクノロジーを用いて実現するワクワクする二日間を過ごしましょう！
@@ -440,9 +440,6 @@
 
 <!-- Plugin JavaScript -->
 <script src="js/jquery.easing.min.js"></script>
-
-<!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
 
 <!-- ChatSupport -->
 <script src="https://cdn.mlkcca.com/v0.6.0/milkcocoa.js"></script>
