[modify] sponsor枠を増やす

--- a/index.html
+++ b/index.html
@@ -84,12 +84,10 @@
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                         <li class="hidden"><a href="#page-top"></a></li>
                         <li><a class="page-scroll" href="#section-timetable">タイムテーブル</a></li>
-                        <!-- <li><a class="page-scroll" href="#section-afterparty">懇親会</a></li> -->
                         <li><a class="page-scroll" href="#section-sponsors">スポンサー</a></li>
                         <li><a class="page-scroll" href="#section-team">運営チーム</a></li>
+                        <li><a class="page-scroll" href="#section-entry">エントリー</a></li>
                         <li><a class="page-scroll" href="#section-locus">これまで</a></li>
-                        <!-- <li><a class="page-scroll entry-btn" href="https://goo.gl/forms/coPY9OMGNIa9Xaph2" target="_blank"><div>参戦する</div></a></li> -->
-                        <!-- <li><a class="page-scroll" href="#section-past">これまで</a></li> -->
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -124,10 +122,10 @@
 
     <section id="none" class="section-wrapper about-event">
         <div class="container">
-            <div class="row">
+            <div class="row wf-notosansjapanese">
                 <div class="col-md-8">
                     <p class="lead">
-                      TakizawaHackathonは、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだす、県内のエンジニア／デザイナー／プランナーなどのクリエイターためのハッカソンコミュニティです。
+                      <strong>TakizawaHackathon</strong>は、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだす、県内のエンジニア／デザイナー／プランナーなどのクリエイターためのハッカソンコミュニティです。
                     </p>
                     <p class="lead">
                       夏真っ只中の8月5日-6日の土日にTakizawaHackathon ver.3が開催されます。ver.3では滝沢市のリアルな課題を解決するアイディアを考え、テクノロジーを用いて実現するワクワクする二日間を過ごしましょう！
@@ -279,7 +277,7 @@
                     <div class="session">
                         <time>19:00M - </time>
                         <h2>アフターパーティー！</h2>
-                        <h3>盛岡駅周辺でアフターパーティー（盛岡駅周辺）を開催します<br>奮ってご参加ください！</h3>
+                        <h3>盛岡駅周辺でアフターパーティー（懇親会）を開催します<br>奮ってご参加ください！</h3>
                     </div>
                     <!-- .session -->
 
@@ -299,20 +297,120 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-3 col-md-offset-3">
+            <div class="sponsor-section">
+              <div class="row">
+                  <div class="col-md-12">
+                      <div class="sponsor-category">
+                          <h2>PLATINUM SPONSOR</h2>
+                          <p>プラチナスポンサー</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="row platinum-sponsor">
+                  <div class="col-sm-6 col-md-3 col-md-offset-3">
+                    <div class="sponsor-img">
+                      <a href="http://www.oz-vision.co.jp/"><img src="img/ozvision.png" class="img-responsive" alt="Image"></a>
+                    </div>
+                  </div>
+                  <!-- /.col-sm-6 -->
+
+                  <div class="col-sm-6 col-md-3">
+                    <div class="sponsor-img">
+                      <a href="http://www.city.takizawa.iwate.jp/index.html"><img src="img/takizawashi.png" class="img-responsive" alt="Image"></a>
+                    </div>
+                  </div>
+                  <!-- /.col-sm-6 -->
+              </div>
+            </div>
+            <div class="sponsor-section">
+              <div class="row">
+                  <div class="col-md-12">
+                      <div class="sponsor-category">
+                          <h2>DINNER PARTY SPONSOR</h2>
+                          <p>立食パーティースポンサー</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-12 col-md-12">
                   <div class="sponsor-img">
                     <a href="http://www.oz-vision.co.jp/"><img src="img/ozvision.png" class="img-responsive" alt="Image"></a>
                   </div>
                 </div>
                 <!-- /.col-sm-6 -->
-
-                <div class="col-sm-6 col-md-3">
+              </div>
+            </div>
+            <div class="sponsor-section">
+              <div class="row">
+                  <div class="col-md-12">
+                      <div class="sponsor-category">
+                          <h2> SPONSOR</h2>
+                          <p>ランチスポンサー</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-12 col-md-12">
                   <div class="sponsor-img">
-                    <a href="http://www.city.takizawa.iwate.jp/index.html"><img src="img/takizawashi.png" class="img-responsive" alt="Image"></a>
+                    <a href=""><img src="img/wanted.png" class="img-responsive" alt="Image"></a>
                   </div>
                 </div>
                 <!-- /.col-sm-6 -->
+              </div>
+            </div>
+            <div class="sponsor-section">
+              <div class="row">
+                  <div class="col-md-12">
+                      <div class="sponsor-category">
+                          <h2>SNACK SPONSOR</h2>
+                          <p>おやつスポンサー</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-12 col-md-12">
+                  <div class="sponsor-img">
+                    <a href="http://www.oz-vision.co.jp/"><img src="img/ozvision.png" class="img-responsive" alt="Image"></a>
+                  </div>
+                </div>
+                <!-- /.col-sm-6 -->
+              </div>
+            </div>
+            <div class="sponsor-section">
+              <div class="row">
+                  <div class="col-md-12">
+                      <div class="sponsor-category">
+                          <h2>DRINK SPONSOR</h2>
+                          <p>ドリンクスポンサー</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-12 col-md-12">
+                  <div class="sponsor-img">
+                    <a href="http://www.oz-vision.co.jp/"><img src="img/ozvision.png" class="img-responsive" alt="Image"></a>
+                  </div>
+                </div>
+                <!-- /.col-sm-6 -->
+              </div>
+            </div>
+            <div class="sponsor-section">
+              <div class="row">
+                  <div class="col-md-12">
+                      <div class="sponsor-category">
+                          <h2>STICKER SPONSOR</h2>
+                          <p>ステッカースポンサー</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-12 col-md-12">
+                  <div class="sponsor-img">
+                    <a href=""><img src="img/wanted.png" class="img-responsive" alt="Image"></a>
+                  </div>
+                </div>
+                <!-- /.col-sm-6 -->
+              </div>
             </div>
         </div>
         <!--end of .container -->
@@ -348,7 +446,7 @@
     </section>
     <!-- .team -->
 
-    <section  class="section-wrapper">
+    <section id="section-entry" class="section-wrapper">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
