[modify] 参加資格を追記

--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
                         <strong>TakizawaHackathon ver.3</strong><br>
                         日時：2017/08/05-06<br>
                         場所：滝沢市IPUイノベーションセンター<br>
-                        〒020-0611 滝沢市岩手県滝沢市巣子152-409<br>
-                        <br>
+                        　　　滝沢市岩手県滝沢市巣子152-409<br>
+                        参加資格：岩手県内の学生
+                        <br><br>
                         <strong>エントリー締め切り：<br>2017年07月30日(日) 23:59 UTC+09</strong>
                     </address>
                 </div>
