--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
     js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.9&appId=280989592245534";
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));</script>
+  <-- GoogleAnalytics -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-102291421-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
 
 <div id="main-wrapper">
     <!-- Page Preloader -->
