--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.9&appId=280989592245534";
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));</script>
-  <-- GoogleAnalytics -->
+  <!-- GoogleAnalytics -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
