[modify] 空hrefを見直し

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
               <div class="row">
                 <div class="col-sm-12 col-md-12">
                   <div class="sponsor-img">
-                    <a href=""><img src="img/wanted.png" class="img-responsive" alt="Image"></a>
+                    <a href="https://goo.gl/forms/B6f7h76VAYpwBw7B3"><img src="img/wanted.png" class="img-responsive" alt="Image"></a>
                   </div>
                 </div>
                 <!-- /.col-sm-6 -->
@@ -418,7 +418,7 @@
               <div class="row">
                 <div class="col-sm-12 col-md-12">
                   <div class="sponsor-img">
-                    <a href=""><img src="img/wanted.png" class="img-responsive" alt="Image"></a>
+                    <a href="https://goo.gl/forms/B6f7h76VAYpwBw7B3"><img src="img/wanted.png" class="img-responsive" alt="Image"></a>
                   </div>
                 </div>
                 <!-- /.col-sm-6 -->
