--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <li><a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="basic-label-counter" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a></li>
               </ul>
             </nav>
-            <a href="https://goo.gl/forms/coPY9OMGNIa9Xaph2" class="btn btn-default btn-shadow wf-notosansjapanese" target="_blank">参戦する</a>
+            <a id="entry-btn-top" href="https://goo.gl/forms/coPY9OMGNIa9Xaph2" class="btn btn-default btn-shadow wf-notosansjapanese" target="_blank">参戦する</a>
           </div>
     </div>
     <!-- .Jumbotron-->
