--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
               <div class="row">
                   <div class="col-md-12">
                       <div class="sponsor-category">
-                          <h2> SPONSOR</h2>
+                          <h2>LUNCH SPONSOR</h2>
                           <p>ランチスポンサー</p>
                       </div>
                   </div>
