[modify] スタイルの微調整:

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                     <div class="section-title entry-section-title">
                         <h2>あなたのご参加をお待ちしております！</h2>
                         <p> <strong>エントリー締め切り<br>2017年07月30日(日) 23:59 UTC+09</strong></p>
-                        <p> 定員：20名（定員を満たした段階で募集を終了します）</p>
+                        <p> <strong>定員：20名（定員を満たした段階で募集終了）</strong></p>
                         <br>
                         <h4>締め切りまであと…</h4>
                     </div>
