[modify] タイムライン修正

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="session">
                         <time>6:30PM - 7:30PM</time>
                         <h2>立食パーティー</h2>
-                        <h3>リフレッシュの機会としてパーティーの時間をご用意しました！<br>Web系ベンチャーのオズビジョン様の現場で活躍されているエンジニアの方々とざっくばらんに会話することもできます！</h3>
+                        <h3>リフレッシュの機会としてパーティーの時間をご用意しました。また、<a href="http://www.oz-vision.co.jp/" target="_blank">オズビジョン社</a>※で実際に働いている現役エンジニアの方々とざっくばらんに談話できます！<span>※ Webサービスを複数展開している東京のITベンチャー企業。</span></h3>
                     </div>
                     <!-- .session -->
                     <div class="session">
