[modify] css cache reset

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.mlkcca.com/chatsupport.min.css" />
 
     <!-- Style CSS -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/style.css?20170711-1151" rel="stylesheet" />
     <link href="css/customize.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
