--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="row wf-notosansjapanese">
                 <div class="col-md-8">
                     <p class="lead">
-                      <strong>TakizawaHackathon</strong>は、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだす、県内のエンジニア／デザイナー／プランナーなどのクリエイターためのハッカソンコミュニティです。
+                      <strong>TakizawaHackathon</strong>は、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだす、県内のエンジニア／デザイナー／プランナーなどのクリエイターのためのハッカソンコミュニティです。
                     </p>
                     <p class="lead">
                       夏真っ只中の8月5日-6日の土日にTakizawaHackathon ver.3が開催されます。ver.3では滝沢市のリアルな課題を解決するアイディアを考え、テクノロジーを用いて実現するワクワクする二日間を過ごしましょう！
