[modify] タブレットやPCの表示に対応

--- a/index.html
+++ b/index.html
@@ -96,11 +96,8 @@
                     <ul class="nav navbar-nav">
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                         <li class="hidden"><a href="#page-top"></a></li>
-                        <li><a class="page-scroll" href="#section-timetable">タイムテーブル</a></li>
-                        <li><a class="page-scroll" href="#section-sponsors">スポンサー</a></li>
-                        <li><a class="page-scroll" href="#section-team">運営チーム</a></li>
+                        <li><a href="/about/">当コミュニティについて</a></li>
                         <li><a class="page-scroll" href="#section-entry">エントリー</a></li>
-                        <li><a class="page-scroll" href="#section-locus">これまで</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
