[modify] metaタグの追加 decription, keywords

--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About | TakizawaHackathon // 滝沢市のハッカソンコミュニティ</title>
   <meta name="keyword" content="TakizawaHachathon,滝沢ハッカソン,ハッカソン,岩手IT,学生">
+  <meta name=”description” content=”TakizawaHackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。” />
+
 
   <meta property="og:title" content="About | TakizawaHackathon // 滝沢市のハッカソンコミュニティ" />
   <meta property="og:description" content="TakizawaHackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。" />
