[modify] キャッシュ最適化

--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.mlkcca.com/chatsupport.min.css" />
 
   <!-- Style CSS -->
-  <link href="/css/style.css?20170711-1200" rel="stylesheet" />
+  <link href="/css/style.css?20170715" rel="stylesheet" />
   <link href="/css/customize.css" rel="stylesheet" />
   <link href="/css/simple_page.css" rel="stylesheet" />
 
