--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.mlkcca.com/chatsupport.min.css" />
 
     <!-- Style CSS -->
-    <link href="css/style.css?20170711-1200" rel="stylesheet" />
+    <link href="css/style.css?20170715" rel="stylesheet" />
     <link href="css/customize.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
