[modify] リンク修正

--- a/about/index.html
+++ b/about/index.html
@@ -105,7 +105,7 @@
             <ul class="nav navbar-nav">
               <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
               <li class="hidden"><a href="#page-top"></a></li>
-              <li><a class="page-scroll" href="/index.html">トップ</a></li>
+              <li><a class="page-scroll" href="/">トップ</a></li>
               <!-- <li><a class="page-scroll" href="#section-sponsors">スポンサー</a></li>
                         <li><a class="page-scroll" href="#section-team">運営チーム</a></li>
                         <li><a class="page-scroll" href="#section-entry">エントリー</a></li>
