--- a/about/index.html
+++ b/about/index.html
@@ -226,7 +226,7 @@
                 <li>TakizawaHackathonで生まれたプロダクトの継続的な開発・運用の支援</li>
                 <div class="nested-simple-list">
                   <ul>
-                    <li>プロダクトのリストユーザーに価値を提供するフェーズに関わる疑問や進め方に関してアドバイザーという立場で共に考え、協力企業と連携しながら継続的な支援を行います</li>
+                    <li>プロダクトのリリース後、実際にユーザーに価値を提供していく運用フェーズに関わる疑問や進め方に関してアドバイザーという立場で共に考え、協力企業と連携しながら継続的な支援を行います</li>
                   </ul>
                 </div>
               </ul>
