[modify] リンクの修正, 文言の微調整

--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-            <a class="navbar-brand page-scroll" href="/index.html">
+            <a class="navbar-brand page-scroll" href="/">
                       <svg class="navbar-brand-svg"><use xlink:href="#logo"/></svg>
                     </a>
           </div>
