--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                           <a class="google-map-link" href="https://goo.gl/maps/kcLkeXvPHWw"><i class="fa fa-map-marker" aria-hidden="true"></i>Google Map</a>
                         </div
                         <br>
-                        参加資格：岩手県内の学生
+                        参加資格：岩手県内の学生<br>
+                        参加費：無料
                         <br><br>
                         <strong>エントリー締め切り：<br>2017年07月30日(日) 23:59 UTC+09</strong>
                     </address>
