[modify] 文言の修正

--- a/about/index.html
+++ b/about/index.html
@@ -143,7 +143,7 @@
         <div class="container simple-page-wrapper">
           <div class="row">
             <div class="section-titles">
-              <h3>The mission of us</h3>
+              <h3>our mission</h3>
               <p class="sub-title">私たちの目的</p>
             </div>
 
